--- a/requirements.txt
+++ b/requirements.txt
@@ -13,26 +13,36 @@ cffi==1.16.0
 chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
+contourpy==1.2.1
 cssselect2==0.7.0
+cycler==0.12.1
 defusedxml==0.7.1
 distro==1.9.0
 exceptiongroup==1.2.1
+fonttools==4.51.0
 frozenlist==1.4.1
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
 idna==3.7
+kiwisolver==1.4.5
 lxml==5.2.2
 magic-filter==1.0.12
 multidict==6.0.5
+numpy==1.26.4
 openai==1.29.0
+packaging==24.0
 pillow==10.3.0
 pycparser==2.22
 pydantic==2.7.1
 pydantic_core==2.18.2
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 regex==2024.5.10
 requests==2.31.0
+scipy==1.13.0
+six==1.16.0
 sniffio==1.3.1
 tiktoken==0.7.0
 tinycss2==1.3.0
