--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ annotated-types==0.6.0
 anyio==4.3.0
 async-timeout==4.0.3
 attrs==23.2.0
+blinker==1.4
 cairocffi==1.7.0
 CairoSVG==2.7.1
 certifi==2024.2.2
@@ -13,41 +14,66 @@ cffi==1.16.0
 chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
+colorama==0.4.4
 contourpy==1.2.1
+cryptography==3.4.8
 cssselect2==0.7.0
 cycler==0.12.1
+dbus-python==1.2.18
 defusedxml==0.7.1
 distro==1.9.0
+distro-info==1.1+ubuntu0.2
 exceptiongroup==1.2.1
 fonttools==4.51.0
 frozenlist==1.4.1
 h11==0.14.0
 httpcore==1.0.5
+httplib2==0.20.2
 httpx==0.27.0
 idna==3.7
+importlib-metadata==4.6.4
+jeepney==0.7.1
+keyring==23.5.0
 kiwisolver==1.4.5
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
 lxml==5.2.2
 magic-filter==1.0.12
+more-itertools==8.10.0
 multidict==6.0.5
 numpy==1.26.4
+oauthlib==3.2.0
 openai==1.29.0
 packaging==24.0
 pillow==10.3.0
 pycparser==2.22
 pydantic==2.7.1
 pydantic_core==2.18.2
+PyGObject==3.42.1
+PyJWT==2.3.0
 pyparsing==3.1.2
+python-apt==2.4.0+ubuntu3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+PyYAML==5.4.1
 regex==2024.5.10
 requests==2.31.0
 scipy==1.13.0
+SecretStorage==3.3.1
 six==1.16.0
 sniffio==1.3.1
+ssh-import-id==5.11
+systemd-python==234
 tiktoken==0.7.0
 tinycss2==1.3.0
 tqdm==4.66.4
 typing_extensions==4.11.0
+ubuntu-drivers-common==0.0.0
+unattended-upgrades==0.1
 urllib3==2.2.1
+wadllib==1.3.6
 webencodings==0.5.1
+xkit==0.0.0
 yarl==1.9.4
+zipp==1.0.0
