--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ magic-filter==1.0.12
 multidict==6.0.5
 openai==1.35.0
 pillow==10.3.0
+psycopg==3.1.19
 pycparser==2.22
 pydantic==2.7.4
 pydantic_core==2.18.4
