--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ annotated-types==0.7.0
 anyio==4.4.0
 async-timeout==4.0.3
 attrs==23.2.0
+build==1.2.1
 cairocffi==1.7.1
 CairoSVG==2.7.1
 certifi==2024.6.2
@@ -16,6 +17,7 @@ defusedxml==0.7.1
 distro==1.9.0
 exceptiongroup==1.2.1
 frozenlist==1.4.1
+greenlet==3.0.3
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
@@ -23,17 +25,20 @@ idna==3.7
 magic-filter==1.0.12
 multidict==6.0.5
 openai==1.35.0
+packaging==24.1
 pillow==10.3.0
 psycopg==3.1.19
 pycparser==2.22
 pydantic==2.7.4
 pydantic_core==2.18.4
+pyproject_hooks==1.1.0
 python-dotenv==1.0.1
 regex==2024.5.15
 requests==2.32.3
 sniffio==1.3.1
 tiktoken==0.7.0
 tinycss2==1.3.0
+tomli==2.0.1
 tqdm==4.66.4
 typing_extensions==4.12.2
 urllib3==2.2.2
