--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,7 @@
 test.py
 __pycache__
 src/utils/analytics/errors.json
-src/templates/media/saved_images/
-!src/templates/media/saved_images/Sebastian.jpg
+/src/utils/temp/images/*
+/src/utils/temp/markdown/*
+!/src/utils/temp/images/.gitignore
+!/src/utils/temp/markdown/.gitignore
