--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .venv
 __pycache__
-secrets.txt
+secrets/*
 src/utils/analytics/errors.json
-/src/utils/temp/images/*
-/src/utils/temp/documents/*
-!/src/utils/temp/images/.gitignore
-!/src/utils/temp/documents/.gitignore
+src/utils/temp/images/*
+src/utils/temp/documents/*
+!src/utils/temp/images/.gitignore
+!src/utils/temp/documents/.gitignore
