Add pgdb to compose.yaml

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 
 # Required
 CERTBOT_EMAIL=txxxxxxxv@gmail.com
-# Optional (Defaults)
+# Optional
 DHPARAM_SIZE=2048
 ELLIPTIC_CURVE=secp256r1
 RENEWAL_INTERVAL=14d
@@ -10,3 +10,12 @@ RSA_KEY_SIZE=2048
 STAGING=0
 USE_ECDSA=1
 DEBUG=0
+
+
+# PGDB ENVIRONMENT VARIABLES
+
+# Required
+POSTGRES_PASSWORD_FILE=/run/secrets/db_password
+# Optional
+POSTGRES_USER=chxxxxbot
+POSTGRES_DB=chxxxxbot
