--- a/compose.yaml
+++ b/compose.yaml
@@ -2,6 +2,8 @@ services:
   bot:
     build: .
     restart: always
+    depends_on:
+      - pgdb
     secrets:
       - webhook_secret
       - bot_token
@@ -24,9 +26,22 @@ services:
     volumes:
       - ssl_cert:/etc/letsencrypt
       - ./nginx.conf:/etc/nginx/user_conf.d/nginx.conf
+  pgdb:
+    image: postgres:latest
+    restart: always
+    secrets:
+      - db_password
+    env_file:
+      - .env
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+      - ./pgdb_scheme.sql:/docker-entrypoint-initdb.d/schema.sql
 
 volumes:
   ssl_cert:
+  pgdata:
 
 
 secrets:
