--- a/nginx.conf
+++ b/nginx.conf
@@ -4,12 +4,12 @@ server {
     listen [::]:443 ssl;
 
     # Domain names this server should respond to.
-    server_name trxxxxkov.net;
+    server_name xxxxxxx.site;
 
     # Load the certificate files.
-    ssl_certificate         /etc/letsencrypt/live/trxxxxkov.net/fullchain.pem;
-    ssl_certificate_key     /etc/letsencrypt/live/trxxxxkov.net/privkey.pem;
-    ssl_trusted_certificate /etc/letsencrypt/live/trxxxxkov.net/chain.pem;
+    ssl_certificate         /etc/letsencrypt/live/xxxxxxx.site/fullchain.pem;
+    ssl_certificate_key     /etc/letsencrypt/live/xxxxxxx.site/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/xxxxxxx.site/chain.pem;
 
     # Load the Diffie-Hellman parameter.
     ssl_dhparam /etc/letsencrypt/dhparams/dhparam.pem;
