--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@
 
 # Required
 CERTBOT_EMAIL=txxxxxxxv@gmail.com
+NGINX_HOST=xxxxxxx.site
+NGINX_PROXY_PORT=8080
 # Optional
 DHPARAM_SIZE=2048
 ELLIPTIC_CURVE=secp256r1
