Make error alert being send as file to the owner's chat

--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
-# WEBSERVER ENVIRONMENT VARIABLES
+### BOT ENVIRONMENT VARIABLES
+
+#Required
+OWNER_TG_ID=791388236
+
+
+### WEBSERVER ENVIRONMENT VARIABLES
 
 # Required
 CERTBOT_EMAIL=txxxxxxxv@gmail.com
@@ -14,7 +20,7 @@ USE_ECDSA=1
 DEBUG=0
 
 
-# PGDB ENVIRONMENT VARIABLES
+### PGDB ENVIRONMENT VARIABLES
 
 # Required
 POSTGRES_PASSWORD_FILE=/run/secrets/db_password
