--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 # The following rules can be applied with 'git add --renormalize .' command
 secrets/* assume-unchanged
+src/templates/tutorial/videos.py
