Add file for pgdb_data

--- a/.env
+++ b/.env
@@ -7,8 +7,8 @@ OWNER_TG_ID=791388236
 ### WEBSERVER ENVIRONMENT VARIABLES
 
 # Required
-CERTBOT_EMAIL=txxxxxxxv@gmail.com
-NGINX_HOST=xxxxxxx.site
+CERTBOT_EMAIL=trxxxxkov@gmail.com
+NGINX_HOST=trxxxxkov.net
 NGINX_PROXY_PORT=8080
 # Optional
 DHPARAM_SIZE=2048
