--- a/.env
+++ b/.env
@@ -25,5 +25,5 @@ DEBUG=0
 # Required
 POSTGRES_PASSWORD_FILE=/run/secrets/db_password
 # Optional
-POSTGRES_USER=chxxxxbot
-POSTGRES_DB=chxxxxbot
+POSTGRES_USER=postgres
+POSTGRES_DB=postgres
