Shorter list of optional parameters for webserver

--- a/.env
+++ b/.env
@@ -3,21 +3,15 @@
 #Required
 OWNER_TG_ID=791388236
 
-
 ### WEBSERVER ENVIRONMENT VARIABLES
 
 # Required
 CERTBOT_EMAIL=trxxxxkov@gmail.com
-NGINX_HOST=trxxxxkov.net
+NGINX_HOST=xxxxxxx.site
 NGINX_PROXY_PORT=8080
 # Optional
-DHPARAM_SIZE=2048
-ELLIPTIC_CURVE=secp256r1
 RENEWAL_INTERVAL=14d
-RSA_KEY_SIZE=2048
 STAGING=0
-USE_ECDSA=1
-DEBUG=0
 
 
 ### PGDB ENVIRONMENT VARIABLES
