--- a/.env
+++ b/.env
@@ -1,14 +1,15 @@
 ### BOT ENVIRONMENT VARIABLES
 
-#Required
+# Required
 OWNER_TG_ID=791388236
+# Optional
 BOT_DEBUG=0
 
 ### WEBSERVER ENVIRONMENT VARIABLES
 
 # Required
 CERTBOT_EMAIL=trxxxxkov@gmail.com
-NGINX_HOST=xxxxxxx.site
+NGINX_HOST=trxxxxkov.net
 NGINX_PROXY_PORT=8080
 # Optional
 RENEWAL_INTERVAL=14d
