Comment out default values for required env variables

--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
 ### BOT ENVIRONMENT VARIABLES
 
 # Required
-OWNER_TG_ID=791388236
+OWNER_TG_ID=#791388236
 # Optional
 BOT_DEBUG=0
 
 ### WEBSERVER ENVIRONMENT VARIABLES
 
 # Required
-CERTBOT_EMAIL=trxxxxkov@gmail.com
-NGINX_HOST=trxxxxkov.net
+CERTBOT_EMAIL=#example@gmail.com
+NGINX_HOST=#example.com
 # Optional
 NGINX_PROXY_PORT=8080
 RENEWAL_INTERVAL=14d
